docs: add Java 25 features and examples to README